--- a/docs/_posts/2024-08-05-toolset.md
+++ b/docs/_posts/2024-08-05-toolset.md
@@ -4,70 +4,66 @@ layout: "post"
 date: 2024-07-04
 permalink: "/toolset/"
 ---
-# Still from last year!!!
-
-### Sections
 
 
-### Purpose
 
--   Warm-up
--   Get everyone on the same page
+### Day 1: Morning - Computers in general, files and the terminal
 
 * * *
 
-## Day 1: Computers in general, review of R
+Schedule:
 
-### Schedule for day 1 - Warm up
+| What        | When  |
+|-------------|-------|
+| Start       | 09:00 |
+| End / lunch | 11:45 |
 
-| From  | To    | What                                                                         |
-|-------|-------|------------------------------------------------------------------------------|
-| 9:00  | 09:30 | General introduction                                                         |
-| 9:30  | 10:15 | Discussion on scientific activities, computers and tools                     |
-| 10:15 | 10:30 | **Coffee**                                                                   |
-| 10:30 | 11:30 | Presentation on FAIR and open data, install git                              |
-| 11:45 | 13:15 | **Lunch**                                                                    |
-| 13:15 | 13:30 | Project and file management principles                                       |
-| 13:30 | -     | Installing Git, Terminal and BASH, Directories, Git basics, GitHub, Markdown |
-| -     | 17:30 | Markdown - the dinosaur example, GitHub Pages                                |
-|-------|-------|------------------------------------------------------------------------------|
-| 17:30 | -\>   | Pizza and beer in the Pal Garden                                             |
 
-### Links
+#### Material
+
+- General introduction (30 min)
+- Discussion on scientific activities and computers (30 min)
+- Terminal git and bash essentials
+
+
+
+#### Slides
+
+- [Files and git]({{site.baseurl}}/data/1_toolset/2023-08-21_files-git-bash.pdf)
+- [Data sharing and standards]({{site.baseurl}}/data/1_toolset/Dunne_data_sharing_standards.pdf)
+
+* * *
+
+### Day 1: Afternoon - R
+
+Schedule:
+
+| What   | When  |
+|--------|-------|
+| Start  | 13:00 |
+| End    | 17:15 |
+| Pizza! | 17:30 |
+
+50 Minutes of class and 10 minutes of break every hour.
+
+#### Material
+
+- Michal Kowalewski's [R quiz]({{site.baseurl}}/data/1_toolset/introQuiz.R) (30 min, silent work on paper!) 
+- Solutions (~1h)
+- Demonstration code and project ([1_corals_demo.R]({{site.baseurl}}/data/1_toolset/1_corals_demo.R))
+- Exercise on the penguins data ([Example exercise](https://adamkocsis.github.io/rkheion/Exercises/2023-02-15_penguin_species.html))
+- (Maybe [Stats and resampling]({{site.baseurl}}/data/1_toolset/resampling.R))
+
+* * *
+
+### Goodies
+
+#### Learning the terminal and git
+
 - [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
-- [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)
-- [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
-- [Acadmic pages (example jekyll)](https://github.com/academicpages/academicpages.github.io)
+- [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/)
 
-### Papers
--   [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/1_toolset/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
--   [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/1_toolset/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
-
-### Slides
-
--   [Files and git]({{site.baseurl}}/data/1_toolset/2023-08-21_files-git-bash.pdf)
--   [Data sharing and standards]({{site.baseurl}}/data/1_toolset/Dunne_data_sharing_standards.pdf)
-
-* * *
-
-
-| From  | To    | What                                         |
-|-------|-------|----------------------------------------------|
-| 09:00 | 09:50 | Finishing git-related, markdown, websites    |
-| 12:00 | 13:30 | **Lunch**                                    |
-| 13:00 | 15:30 | R: Quiz and solutions (by Michal Kowalewski) |
-| 15:30 | 17:15 | Example code and stas                        |
-
-### R 
-- [Michal Kowalweski's R quiz]({{site.baseurl}}/data/1_toolset/introQuiz.R)
-- [Michal Kowalweski's R quiz (extra)]({{site.baseurl}}/data/1_toolset/quiz_solutions.R)
-- [1_corals_demo.R]({{site.baseurl}}/data/1_toolset/1_corals_demo.R)
-- [Stats and resampling]({{site.baseurl}}/data/1_toolset/resampling.R)
-- [Example exercise](https://adamkocsis.github.io/rkheion/Exercises/2023-02-15_penguin_species.html)
-
-* * *
-
-# Making a website with `academicpages`
+#### Making a website with `academicpages`
 
 - Go to [Acadmic pages (example jekyll)](https://github.com/academicpages/academicpages.github.io), and fork the repository!
 - Go to your forked version of the repository. Go to `Settings`, and then to `Pages` (currently under the section `Code and automation`). 
