--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -2,15 +2,21 @@
 title: "Module 0: Preparations"
 layout: "post"
 date: 2024-07-04
-permalink: "/toolset/"
+permalink: "/prepare/"
 ---
 
-### Links
-- [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
-- [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)
-- [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
-- [Acadmic pages (example jekyll)](https://github.com/academicpages/academicpages.github.io)
 
-### Papers
--   [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/1_toolset/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
--   [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/1_toolset/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
+## Markdown
+
+Markdown is a very simple markup 'language' that can be very easilly translated into any other kind of document, such as webpages (html) and pdfs. It is used in web design, programming documentation and tutorials - as well as for taking notes. If you aare not familiar with markdown, you are highly suggested to check it out (just google `'markdown'` and you will find a ton of material, here is a [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)). You are also welcome to do the following formatting tutorial:
+
+- [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
+
+If you are not familiar with GitHub at all, you can download the exercise files from [this link](https://github.com/adamkocsis/dinosaur-markdown/archive/refs/heads/main.zip). 
+
+Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. Feel free to give it a try and play around with it if you haven't yet!
+
+# Papers
+
+-   [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/toolset/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
+-   [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/toolset/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
