--- a/docs/_posts/2024-08-05-toolset.md
+++ b/docs/_posts/2024-08-05-toolset.md
@@ -21,16 +21,14 @@ Schedule:
 
 #### Material
 
-- General introduction (30 min)
-- Discussion on scientific activities and computers (30 min)
-- Terminal git and bash essentials
-
+- General introduction
+- Discussion on scientific activities and computers
+- Terminal, git and bash essentials
 
 
 #### Slides
 
-- [Files and git]({{site.baseurl}}/data/1_toolset/2023-08-21_files-git-bash.pdf)
-- [Data sharing and standards]({{site.baseurl}}/data/1_toolset/Dunne_data_sharing_standards.pdf)
+- [Files and git]({{site.baseurl}}/data/toolset/2024-08-05_files-git-bash.pdf)
 
 * * *
 
@@ -48,16 +46,28 @@ Schedule:
 
 #### Material
 
-- Michal Kowalewski's [R quiz]({{site.baseurl}}/data/1_toolset/introQuiz.R) (30 min, silent work on paper!) 
+- Demonstration code and project ([1_corals_demo.R]({{site.baseurl}}/data/toolset/1_corals_demo.R))
+- Michal Kowalewski's R quiz (30 min, silent work on paper!) 
 - Solutions (~1h)
-- Demonstration code and project ([1_corals_demo.R]({{site.baseurl}}/data/1_toolset/1_corals_demo.R))
 - Exercise on the penguins data ([Example exercise](https://adamkocsis.github.io/rkheion/Exercises/2023-02-15_penguin_species.html))
-- (Maybe [Stats and resampling]({{site.baseurl}}/data/1_toolset/resampling.R))
+- (Maybe [Stats and resampling]({{site.baseurl}}/data/toolset/resampling.R))
 
 * * *
 
 ### Goodies
 
+#### Markdown
+
+Markdown is a very simple markup 'language' that can be very easilly translated into any other kind of document, such as webpages (html) and pdfs. It is used in web design, programming documentation and tutorials - as well as for taking notes. If you aare not familiar with markdown, you are highly suggested to check it out (just google `'markdown'` and you will find a ton of material, here is a [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)). You are also welcome to do the following formatting tutorial:
+
+- [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
+
+Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. Feel free to give it a try and play around with it if you haven't yet!
+
+#### Papers
+
+-   [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/toolset/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
+-   [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/toolset/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
 #### Learning the terminal and git
 
 - [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
