--- a/docs/_posts/2024-08-05-toolset.md
+++ b/docs/_posts/2024-08-05-toolset.md
@@ -82,3 +82,8 @@ Markdown is often used for literate programming, i.e. for writing tutorials and 
 - If you want to make a webpage with the URL `https://<yourgithubname>.github.io/`, you have to create a repository called `<yourgithubname>.github.io`. 
 - You can also set up a custom domain for this page. See [this article](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site) to find out how. 
 
+
+#### Books on R
+
+- [R Resources](https://adamtkocsis.com/rkheion/Resources.html)
+- [Hadley Wickham's Advanced R book](http://adv-r.had.co.nz/)
