Added bash executable description.

--- a/docs/_posts/2024-08-05-toolset.md
+++ b/docs/_posts/2024-08-05-toolset.md
@@ -87,3 +87,35 @@ Markdown is often used for literate programming, i.e. for writing tutorials and 
 
 - [R Resources](https://adamtkocsis.com/rkheion/Resources.html)
 - [Hadley Wickham's Advanced R book](http://adv-r.had.co.nz/)
+
+* * *
+
+## Some missing notes
+
+#### Wrtiting shell scripts
+
+(BASH) Shell scripts can be run directly with the `bash` console application: If your code file is called `my_code.sh` (.sh is the typical extension for shell scripts) you can run it with: 
+
+```sh
+bash my_code.sh
+```
+
+Alternatively, you can make the file a proper executable. For that it has to start with a 'shebang', which is a commented line that looks like this:
+
+```
+#!/bin/bash
+```
+
+Then you need to change its mode to become executable with:
+
+```sh
+chmod +x my_code.sh
+```
+
+which you can confirm with `ls -l`. Once the file is executable, you can run it by typing in its path to the console. For files in your current working directory, you have to point to the current working directory:
+
+```sh
+./my_code.sh
+```
+
+Or you have to add the file's directory to the `PATH` environment variable.
