Added CMR day 1 stuff.

--- a/docs/_posts/2024-08-15-div-cmr.md
+++ b/docs/_posts/2024-08-15-div-cmr.md
@@ -5,14 +5,45 @@ date: 2024-07-04
 permalink: "cmr/"
 ---
 
-# Heading
+# Module 5: Phylogenetics 
 
-- This is a link to an external file (this one is on Zenodo): [metadata.txt](https://zenodo.org/record/8232301/files/metadata.txt?download=1) 
-
-- This is a link to a file on this page: [other metadata.txt]({{site.baseurl}}/data/6_cmr/metadata.txt)
-
-this is an image:
-
-![The caption of the image]({{site.baseurl}}/images/Icon-SummerSchool-150x150.png)
+Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture (CMR). 
 
 
+
+| When   | What                                                                 |
+|--------|----------------------------------------------------------------------|
+| Aug 15 | **Day 9**: Introduction to CMR                                       |
+| Aug 16 | **Day 10**: CMR continued. |
+|--------|----------------------------------------------------------------------|
+
+<br>
+
+- - -
+
+<br>
+
+## Day 9
+
+<br>
+
+### Lecture slides
+
+
+- [ErlangenLiow0.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow0.pdf)  
+- [ErlangenLiow1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow1.pdf)  
+- [ErlangenLiow2.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow2.pdf)  
+- ErlangenLiow3.pdf  
+
+
+
+### R Code
+
+- [Erlangen Tutorial 1.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 1.R)  
+- [Erlangen Tutorial 1 - with suggested answers.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 1 - with suggested answers.R)  
+- [Erlangen Tutorial 2.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 2.R)  
+
+
+## Day 10
+
+<br>
