Completed CMR material upload.

--- a/docs/_posts/2024-08-15-div-cmr.md
+++ b/docs/_posts/2024-08-15-div-cmr.md
@@ -33,8 +33,7 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 - [ErlangenLiow0.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow0.pdf)  
 - [ErlangenLiow1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow1.pdf)  
 - [ErlangenLiow2.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow2.pdf)  
-- ErlangenLiow3.pdf  
-
+- [ErlangenLiow3.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow3.pdf)  
 
 
 ### R Code
@@ -43,7 +42,22 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 - [Erlangen Tutorial 1 - with suggested answers.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 1 - with suggested answers.R)  
 - [Erlangen Tutorial 2.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 2.R)  
 
+<br>
+<br>
 
 ## Day 10
 
 <br>
+
+### Lecture slides
+
+
+- [ErlangenLiow4.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow4.pdf)  
+- [Erlangen Tutorial.3.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 3.R)  
+
+<br>
+
+## Reading material
+
+- [Liow and Nichols, 2010 (short course notes)]({{site.url}}/{{site.baseurl}}/data/cmr/Liow and Nichols 2010.pdf)
+- [Liow and Nichols, 2010 (short course supplement)]({{site.url}}/{{site.baseurl}}/data/cmr/liow_Short_Course_supplement.pdf)
