--- a/docs/_posts/2024-08-15-div-cmr.md
+++ b/docs/_posts/2024-08-15-div-cmr.md
@@ -53,6 +53,9 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 
 
 - [ErlangenLiow4.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow4.pdf)  
+
+### R Code
+
 - [Erlangen Tutorial.3.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 3.R)  
 
 <br>
