Corrected module heading.

--- a/docs/_posts/2024-08-15-div-cmr.md
+++ b/docs/_posts/2024-08-15-div-cmr.md
@@ -5,7 +5,7 @@ date: 2024-07-04
 permalink: "cmr/"
 ---
 
-# Module 5: Phylogenetics 
+# Module 5: CMR 
 
 Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture (CMR). 
 
