--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -5,4 +5,32 @@ date: 2024-07-04
 permalink: "/prepare/"
 ---
 
+# Preparatory material
 
+#### Markdown
+
+Markdown is a very simple markup 'language' that can be very easilly translated into any other kind of document, such as webpages (html) and pdfs. It is used in web design, programming documentation and tutorials - as well as for taking notes. If you aare not familiar with markdown, you are highly suggested to check it out (just google `'markdown'` and you will find a ton of material, here is a [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)). You are also welcome to do the following formatting tutorial:
+
+- [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
+
+Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. Feel free to give it a try and play around with it if you haven't yet!
+
+#### Papers
+
+- [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/prepare/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
+- [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/prepare/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
+
+#### Learning the terminal and git
+
+- [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
+- [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/)
+
+#### Making a website with `academicpages`
+
+- Go to [Acadmic pages (example jekyll)](https://github.com/academicpages/academicpages.github.io), and fork the repository!
+- Go to your forked version of the repository. Go to `Settings`, and then to `Pages` (currently under the section `Code and automation`). 
+- Under `Build and deployment` select the source: **Build from a branch**. And in Branch select `master`, and `/root` and hit save.
+- The page will take some time to build. If you go on the repository's main page, there will be an *orange dot* next to the commit hash. When the page is ready, this will change to a green checkmark. 
+- If you go the settings page where you set up the things above, you should see the URL to the webpage. This URL will typicall be: `https://<yourgithubname>.github.io/<reponame, i.e. academicpages>/`.
+- If you want to make a webpage with the URL `https://<yourgithubname>.github.io/`, you have to create a repository called `<yourgithubname>.github.io`. 
+- You can also set up a custom domain for this page. See [this article](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site) to find out how. 
