--- a/docs/_posts/2024-08-18-toolset.md
+++ b/docs/_posts/2024-08-18-toolset.md
@@ -40,11 +40,26 @@ permalink: "/toolset/"
 
 ### Goodies
 
+#### Learning the terminal and git
+
+- [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
+- [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/)
+
 
 #### Books on R
 
 - [R Resources](https://adamtkocsis.com/rkheion/Resources.html)
-- [Hadley Wickham's Advanced R book](http://adv-r.had.co.nz/)
+
+
+#### Making a website with `academicpages`
+
+- Go to [Acadmic pages (example jekyll)](https://github.com/academicpages/academicpages.github.io), and fork the repository!
+- Go to your forked version of the repository. Go to `Settings`, and then to `Pages` (currently under the section `Code and automation`). 
+- Under `Build and deployment` select the source: **Build from a branch**. And in Branch select `master`, and `/root` and hit save.
+- The page will take some time to build. If you go on the repository's main page, there will be an *orange dot* next to the commit hash. When the page is ready, this will change to a green checkmark. 
+- If you go the settings page where you set up the things above, you should see the URL to the webpage. This URL will typicall be: `https://<yourgithubname>.github.io/<reponame, i.e. academicpages>/`.
+- If you want to make a webpage with the URL `https://<yourgithubname>.github.io/`, you have to create a repository called `<yourgithubname>.github.io`. 
+- You can also set up a custom domain for this page. See [this article](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site) to find out how. 
 
 * * *
 
