--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -10,19 +10,19 @@ permalink: "/prepare/"
 
 #### R
 
-This is by far the most useful resource online 
+We expect you to know some basics of R, which you will be using in most modules of the course. This is by far the most useful resource online 
 
 - [Hadley Wickham's Advanced R book](http://adv-r.had.co.nz/)
 
-I recommend reading through the first chapters in the **Foundations** section! The most vital parts are in the 'Data structures', 'Subsetting', 'Vocabulary' 'Style'  and 'Functions' chapters.
+We recommend reading through the first chapters in the **Foundations** section! The most vital parts are in the 'Data structures', 'Subsetting', 'Vocabulary', 'Style'  and 'Functions'.
 
 #### Markdown
 
-Markdown is a very simple markup 'language' that can be very easilly translated into any other kind of document, such as webpages (html) and pdfs. It is used in web design, programming documentation and tutorials - as well as for taking notes. If you aare not familiar with markdown, you are highly suggested to check it out (just google `'markdown'` and you will find a ton of material, here is a [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)). You are also welcome to do the following formatting tutorial:
+Markdown is a very simple markup 'language' that can be very easily translated into any other kind of document, such as webpages (html) and pdfs. It is used in web design, programming documentation and tutorials - as well as for taking notes. If you aare not familiar with markdown, you are highly suggested to check it out (just google `'markdown'` and you will find a ton of material, here is a [Markdown Cheat sheet](https://www.markdownguide.org/cheat-sheet/)). You are also welcome to do the following formatting tutorial:
 
 - [Dinosaur markdown](https://github.com/adamkocsis/dinosaur-markdown)
 
-Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. Feel free to give it a try and play around with it if you haven't yet!
+Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. 
 
 #### Papers
 
