adding phylo paper

--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -28,4 +28,4 @@ Markdown is often used for literate programming, i.e. for writing tutorials and 
 
 - [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/prepare/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
 - [Wilkinson et al. 2016 - FAIR principles]({{site.baseurl}}/data/prepare/Papers/Wilkinson et al. - 2016 - The FAIR Guiding Principles.pdf)
-
+- [Mulvey et al. 2025 - From fossils to phylogenies]({{site.baseurl}}/data/prepare/Papers/Mulvey et al. 2025 - From fossils to phylogenies.pdf)
