updating phylo prep

--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -24,6 +24,14 @@ Markdown is a very simple markup 'language' that can be very easily translated i
 
 Markdown is often used for literate programming, i.e. for writing tutorials and research logs. A dialect of markdown, [Quarto](https://quarto.org/) is especially efficient at writing good scientific documentation. 
 
+#### Phylogenetics (videos)
+
+We recommened the Paul Lewis’ Phyloseminar lecture series (4 hours of content), which provides an excellent introduction to statistical phylogenetics:
+- [Part 1: Trees and Likelihood](https://www.youtube.com/watch?v=1r4z0YJq580)
+- [Part 2: Substitution models](https://www.youtube.com/watch?v=UsLeY0wZr4Y)
+- [Part 3a: Bayesian statistics and MCMC](https://www.youtube.com/watch?v=4PWlnNsfz90)
+- [Part 3b: Bayesian phylogenetics](https://www.youtube.com/watch?v=TLtOS--YwkU)
+
 #### Papers
 
 - [Cooper and Hsing, 2017 - Reproducible code]({{site.baseurl}}/data/prepare/Papers/Cooper and Hsing, 2017 - Guide to reproducible code.pdf)
