--- a/docs/_posts/2024-08-01-prep.md
+++ b/docs/_posts/2024-08-01-prep.md
@@ -26,7 +26,7 @@ Markdown is often used for literate programming, i.e. for writing tutorials and 
 
 #### Phylogenetics (videos)
 
-We recommened the Paul Lewis’ Phyloseminar lecture series (4 hours of content), which provides an excellent introduction to statistical phylogenetics:
+The Paul Lewis’ Phyloseminar lecture series (4 hours of content) provides an excellent introduction to statistical phylogenetics:
 - [Part 1: Trees and Likelihood](https://www.youtube.com/watch?v=1r4z0YJq580)
 - [Part 2: Substitution models](https://www.youtube.com/watch?v=UsLeY0wZr4Y)
 - [Part 3a: Bayesian statistics and MCMC](https://www.youtube.com/watch?v=4PWlnNsfz90)
