--- a/docs/_posts/2024-08-18-toolset.md
+++ b/docs/_posts/2024-08-18-toolset.md
@@ -1,7 +1,7 @@
 ---
 title: "Module 1: Basic toolset"
 layout: "post"
-date: 2024-08-18
+date: 2025-08-18
 permalink: "/toolset/"
 ---
 
@@ -20,21 +20,19 @@ permalink: "/toolset/"
 
 #### Slides
 
-- [Files and git]({{site.baseurl}}/data/toolset/2024-08-05_files-git-bash.pdf)
+- [Files and git]({{site.baseurl}}/data/toolset/2025-08-18_files-git-bash)
 
 * * *
 
-### Day 1: Afternoon - R
-
+### Day 1: Afternoon - R and Quarto
 
 50 Minutes of class and 10 minutes of break every hour.
 
 #### Material
 
 - Demonstration code and project ([1_corals_demo.R]({{site.baseurl}}/data/toolset/1_corals_demo.R))
-- Michal Kowalewski's R quiz (30 min, silent work on paper!) 
-- Solutions (~1h)
 - Exercise on the penguins data ([Example exercise](https://adamkocsis.github.io/rkheion/Exercises/2023-02-15_penguin_species.html))
+- [Quarto](https://quarto.org/) example [quarto_example.zip]({{site.baseurl}}/data/toolset/quarto_example.zip)
 
 * * *
 
@@ -45,11 +43,9 @@ permalink: "/toolset/"
 - [Unix Workbench coursera course](https://www.coursera.org/learn/unix)
 - [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/)
 
-
-#### Books on R
+#### Additional Books on R
 
 - [R Resources](https://adamtkocsis.com/rkheion/Resources.html)
-
 
 #### Making a website with `academicpages`
 
@@ -61,34 +57,3 @@ permalink: "/toolset/"
 - If you want to make a webpage with the URL `https://<yourgithubname>.github.io/`, you have to create a repository called `<yourgithubname>.github.io`. 
 - You can also set up a custom domain for this page. See [this article](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site) to find out how. 
 
-* * *
-
-## Some missing notes
-
-#### Wrtiting shell scripts
-
-(BASH) Shell scripts can be run directly with the `bash` console application: If your code file is called `my_code.sh` (.sh is the typical extension for shell scripts) you can run it with: 
-
-```sh
-bash my_code.sh
-```
-
-Alternatively, you can make the file a proper executable. For that it has to start with a 'shebang', which is a commented line that looks like this:
-
-```
-#!/bin/bash
-```
-
-Then you need to change its mode to become executable with:
-
-```sh
-chmod +x my_code.sh
-```
-
-which you can confirm with `ls -l`. Once the file is executable, you can run it by typing in its path to the console. For files in your current working directory, you have to point to the current working directory:
-
-```sh
-./my_code.sh
-```
-
-Or you have to add the file's directory to the `PATH` environment variable.
