--- a/docs/_posts/2024-08-18-toolset.md
+++ b/docs/_posts/2024-08-18-toolset.md
@@ -20,7 +20,7 @@ permalink: "/toolset/"
 
 #### Slides
 
-- [Files and git]({{site.baseurl}}/data/toolset/2025-08-18_files-git-bash)
+- [Files and git]({{site.baseurl}}/data/toolset/2025-08-18_files-git-bash.pdf)
 
 * * *
 
