Adam's notes during the lecture.

--- a/docs/_posts/2024-08-18-toolset.md
+++ b/docs/_posts/2024-08-18-toolset.md
@@ -30,7 +30,7 @@ permalink: "/toolset/"
 
 #### Material
 
-- Demonstration code and project ([1_corals_demo.R]({{site.baseurl}}/data/toolset/1_corals_demo.R))
+- Demonstration code and project ([`1_corals_demo.R`]({{site.baseurl}}/data/toolset/1_corals_demo.R) - [`1_corals_demo_adam.R` (written during lecture)]({{site.baseurl}}/data/toolset/1_corals_demo_adam.R))
 - Exercise on the penguins data ([Example exercise](https://adamkocsis.github.io/rkheion/Exercises/2023-02-15_penguin_species.html))
 - [Quarto](https://quarto.org/) example [quarto_example.zip]({{site.baseurl}}/data/toolset/quarto_example.zip)
 
