--- a/docs/_posts/2024-09-01-div-cmr.md
+++ b/docs/_posts/2024-09-01-div-cmr.md
@@ -5,7 +5,7 @@ date: 2024-09-01
 permalink: "cmr/"
 ---
 
-# Module 5: CMR 
+# Module 7: CMR 
 
 Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture (CMR). 
 
@@ -30,17 +30,21 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 ### Lecture slides
 
 
-- [ErlangenLiow0.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow0.pdf)  
-- [ErlangenLiow1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow1.pdf)  
-- [ErlangenLiow2.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow2.pdf)  
-- [ErlangenLiow3.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow3.pdf)  
+- [ErlangenLiow0_2025.Sep.1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow0.pdf)  
+- [ErlangenLiow1_2025.Sep.1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow1.pdf)  
+- [ErlangenLiow2_2025.Sep.1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow2.pdf)  
+- [ErlangenLiow3_2025.Sep.1.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow3.pdf)  
 
 
 ### R Code
 
-- [Erlangen Tutorial 1.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 1.R)  
-- [Erlangen Tutorial 1 - with suggested answers.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 1 - with suggested answers.R)  
-- [Erlangen Tutorial 2.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 2.R)  
+- [Erlangen Tutorial 1.R]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Erlangen Tutorial 1.R)  
+- [Erlangen Tutorial 1 - with suggested answers.R]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Erlangen Tutorial 1 - with suggested answers.R)  
+- [Erlangen Tutorial 2.R]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Erlangen Tutorial 2.R)  
+
+
+### Data
+- [data from previous module: `pbdb_processed_2024-07-11.rds`](https://www.dropbox.com/scl/fi/9xwovh8iyoivloaugi7qs/pbdb_processed_2024-07-11.rds?rlkey=4oep1vvtywm4ukoaekbx3qr77&st=2uaoevoh&dl=1)
 
 <br>
 <br>
@@ -52,15 +56,16 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 ### Lecture slides
 
 
-- [ErlangenLiow4.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/ErlangenLiow4.pdf)  
+- [ErlangenLiow4_2025.sep.2.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/Day 2/ErlangenLiow4_2025.sep.2.pdf)  
 
 ### R Code
 
-- [Erlangen Tutorial.3.R]({{site.url}}/{{site.baseurl}}/data/cmr/Erlangen Tutorial 3.R)  
+- [Erlangen Tutorial.3.R]({{site.url}}/{{site.baseurl}}/data/cmr/Day 2/Erlangen Tutorial 3.R)  
 
 <br>
 
 ## Reading material
 
-- [Liow and Nichols, 2010 (short course notes)]({{site.url}}/{{site.baseurl}}/data/cmr/Liow and Nichols 2010.pdf)
-- [Liow and Nichols, 2010 (short course supplement)]({{site.url}}/{{site.baseurl}}/data/cmr/liow_Short_Course_supplement.pdf)
+- [Liow and Nichols, 2010 (short course notes)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Liow and Nichols 2010.pdf)
+- [Liow and Nichols, 2010 (short course supplement)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/liow_Short_Course_supplement.pdf)
+- [Liow et al. 2015 Ecology Letters Ecological interactions on macroevolutionary time scales  clams and brachiopods are more.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/Day 2/Liow et al. 2015 Ecology Letters Ecological interactions on macroevolutionary time scales  clams and brachiopods are more.pdf)
