--- a/docs/_posts/2024-09-01-div-cmr.md
+++ b/docs/_posts/2024-09-01-div-cmr.md
@@ -66,6 +66,6 @@ Welcome to Module 5: Analyses of diversity dynamics with Capture-Mark-Recapture 
 
 ## Reading material
 
-- [Liow and Nichols, 2010 (short course notes)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Liow and Nichols 2010.pdf)
-- [Liow and Nichols, 2010 (short course supplement)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/liow_Short_Course_supplement.pdf)
+- [Liow and Nichols, 2010 (short course notes)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Liow and Nichols 2010 (CMR background).pdf)
+- [Liow and Nichols, 2010 (short course supplement)]({{site.url}}/{{site.baseurl}}/data/cmr/Day 1/Liow_Short_Course_supplement (CMR background).pdf)
 - [Liow et al. 2015 Ecology Letters Ecological interactions on macroevolutionary time scales  clams and brachiopods are more.pdf]({{site.url}}/{{site.baseurl}}/data/cmr/Day 2/Liow et al. 2015 Ecology Letters Ecological interactions on macroevolutionary time scales  clams and brachiopods are more.pdf)
